Fix controller style on mobile

--- a/index.css
+++ b/index.css
@@ -119,12 +119,12 @@ iframe {
 }
 
 button {
-  align-self: flex-end;
+  align-self: flex-start;
   background-color: #ffffff33;
   border-radius: 3px;
-  background-size: 20px 20px;
-  height: 20px;
-  width: 20px;
+  background-size: 22px 22px;
+  height: 22px;
+  min-width: 22px;
   padding: 0;
   border: none;
   cursor: pointer;
